--- a/index.html
+++ b/index.html
@@ -11,19 +11,65 @@
 </head>
 
 <body>
-    <section>
+    <nav id="navbar">
+        <ul>
+            <li class="item"><a href="#">Home</a></li>
+            <li class="item"><a href="#">Skill</a></li>
+            <li class="item"><a href="#">Training</a></li>
+            <li class="item"><a href="#">Contact Me</a></li>
+        </ul>
+    </nav>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1> <span class="name">Sohrab</span> Portfolio</h1>
             <h3>Professional Web Developer</h3>
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non, consectetur nulla sunt impedit odit eaque exercitationem at architecto quidem placeat fugiat id dolor pariatur magnam adipisci voluptas reprehenderit nostrum recusandae.
-            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur repellat amet quam nesciunt veniam,
+            totam minus eaque quo non aliquam, perferendis facilis sed itaque ipsa odio ipsam unde qui nisi!</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/sohrab-hossain-28948019a/">Hire
+                Me</a>
         </div>
         <div class="half-width">
             <img src="images/profile.png" alt="">
         </div>
     </section>
+
+    <section class="middle-banner">
+        <div class="half-width">
+            <img src="images/profile2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a Web Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur repellat amet quam nesciunt veniam,
+                totam minus eaque quo non aliquam, perferendis facilis sed itaque ipsa odio ipsam unde qui nisi!</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/sohrab-hossain-28948019a/">DOWNLOAD
+                RESUME</a>
+        </div>
+    </section>
+
+    <section class="experience-area">
+        <h2>Experience</h2>
+        <div id="full-stack" class="half-width single-experience">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="name">2021-present | Pro Level Developer</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis nostrum alias labore at
+                voluptatibus non. Provident consequuntur, et laudantium fugit aspernatur voluptas velit, repellat culpa,
+                totam natus sint eaque explicabo?</p>
+        </div>
+
+        <div id="baby-web" class="half-width single-experience">
+            <h2>Baby Web Developer</h2>
+            <h3 class="name">2020-2021 | Programmig Hero Learner</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis nostrum alias labore at
+                voluptatibus non. Provident consequuntur, et laudantium fugit aspernatur voluptas velit, repellat culpa,
+                totam natus sint eaque explicabo?</p>
+        </div>
+    </section>
+
 </body>
+<footer>
+    <p class="footes">©Sohrab 2021, all rights reserved</p>
+</footer>
 
 </html>
