--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 </head>
 
 <body>
-    <nav id="navbar">
+    <!-- <nav id="navbar">
         <ul>
             <li class="item"><a href="#">Home</a></li>
             <li class="item"><a href="#">Skill</a></li>
             <li class="item"><a href="#">Training</a></li>
-            <li class="item"><a href="#">Contact Me</a></li>
+            <li class="item"><a href="#">Contact</a></li>
         </ul>
-    </nav>
+    </nav> -->
     <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
