New Update on Navbar

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 </head>
 
 <body>
-    <!-- <nav id="navbar">
+    <nav id="navbar">
         <ul>
             <li class="item"><a href="#">Home</a></li>
             <li class="item"><a href="#">Skill</a></li>
             <li class="item"><a href="#">Training</a></li>
             <li class="item"><a href="#">Contact</a></li>
         </ul>
-    </nav> -->
+    </nav>
     <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
@@ -42,14 +42,13 @@
             <h1>Dream Big</h1>
             <h3>Become a Web Developer</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur repellat amet quam nesciunt veniam,
-                totam minus eaque quo non aliquam, perferendis facilis sed itaque ipsa odio ipsam unde qui nisi!</p>
-            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/sohrab-hossain-28948019a/">DOWNLOAD
-                RESUME</a>
+            totam minus eaque quo non aliquam, perferendis facilis sed itaque ipsa odio ipsam unde qui nisi!</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/himel.mahmud.007/">Join Facebook</a>
         </div>
     </section>
 
     <section class="experience-area">
-        <h2>Experience</h2>
+        <h2 class="exp"> <span class="name">E</span>xperienc<span class="name">e</span></h2>
         <div id="full-stack" class="half-width single-experience">
             <h2>Full Stack Web Developer</h2>
             <h3 class="name">2021-present | Pro Level Developer</h3>
@@ -69,7 +68,7 @@
 
 </body>
 <footer>
-    <p class="footes">©Sohrab 2021, all rights reserved</p>
+    <p class="end">© <a href="https://www.facebook.com/himel.mahmud.007/"> <span class="name">S</span>ohrab</a> 2021, all rights reserved.</p>
 </footer>
 
 </html>
